# qa_guru_python_5_18

./: README.md  pyproject.toml
